fixed edit page

--- a/to-do-list/views/edit-notes.handlebars
+++ b/to-do-list/views/edit-notes.handlebars
@@ -1,4 +1,4 @@
-<form action="/goals/{{content}}" method="post">
+<form action="/edit-goals" method="post">
 
 	{{#if message}}
 		<p style="color: red">{{message}}</p>
