--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,9 +6,8 @@
 	<body>
 		{{{body}}}
 		<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-    	{{{_sections.home}}}
-    	{{{_sections.add-notes}}}
-    	{{{_sections.edit-notes}}}
+    	{{{_sections.jquery}}}
+    	{{{_sections.home_style}}}
 	</body>
 
 </html>
