--- a/to-do-list/views/edit-notes.handlebars
+++ b/to-do-list/views/edit-notes.handlebars
@@ -74,7 +74,7 @@
 	<div id="dateArea">
 		Due Date: 
 		<input id="dateInput" type="date" placeholder="Due Date"
-		name="due_date" value="{{goal.due_date}}">
+		name="due_date" value="{{goal.exact_due_date}}">
 		<input id="hourInput" type="text" placeholder="Hour"
 		name="due_hour" value="{{goal.due_hour}}">
 		:
