styling the pages

--- a/to-do-list/views/home.handlebars
+++ b/to-do-list/views/home.handlebars
@@ -5,8 +5,11 @@
 		.container {
 			width: 40%;
 			margin: auto;
-			margin-top: 10px;
-			font-size: 17px;
+			margin-top: 15px;
+		}
+
+		.todos {
+			padding-left: 8px;
 		}
 
 		#addArea {
@@ -36,6 +39,16 @@
 			margin: 0;
 		}
 
+		.deleteBtn {
+			position: relative;
+			top: -45px;
+			left: 75%;
+		}
+
+		.finishBtn {
+			margin-left: -55px;
+		}
+
 	</style>
 
 	{{#each goals}}
@@ -55,7 +68,7 @@
 					if (finishState) {
 						$("#" + ctId).css({ 
 									"text-decoration": "line-through",
-									"color" : "gray"
+									"color" : "gray",
 								});
 						$("#" + btnId).html("Not Finished :(");
 					} else {
@@ -84,22 +97,25 @@
 
 {{#each goals}}
 	<div class="container">
-		<p class="tag"><i>{{tag}}</i></p>
-		<p class="content" id="{{stripContent}}">{{content}}</p>
+		<div class="todos">
+			<p class="tag"><i>{{tag}}</i></p>
+			<p class="content" id="{{stripContent}}">{{content}}</p>
 
-		<a href="/edit/{{content}}">
-			<button type="button">Edit</button>
-		</a>
+			<a href="/edit/{{content}}">
+				<button type="button">Edit</button>
+			</a>
 
-		<button id="{{stripContent}}finishBtn"></button>
+			<a class = "deleteBtn" href="/delete/{{content}}">
+				<button type="button">Delete</button>
+			</a>
 
-		<a href="/delete/{{content}}">
-			<button type="button">Delete</button>
-		</a>
-		<p class="createDate">Created at: {{create_date}}</p>
+			<button class="finishBtn" id="{{stripContent}}finishBtn"></button>
 
-		<p class="dueDate">{{due_date}} {{due_time}}</p>
+			
+			<p class="createDate">Created at: {{create_date}}</p>
 
+			<p class="dueDate">{{due_date}} {{due_time}}</p>
+		</div>
 		<hr>
 	</div>
 
