--- a/to-do-list/views/layouts/main.handlebars
+++ b/to-do-list/views/layouts/main.handlebars
@@ -1,6 +1,20 @@
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>Cynthia's To-do List</title>
+
+		<link href="https://fonts.googleapis.com/css?family=Amiko" rel="stylesheet">
+		<style>
+			body {
+				margin-top: 40px;
+				font-family: "Amiko", Helvetica, Sans-serif;
+				font-size: 16px;
+			}
+
+			button {
+				font-family: "Amiko", Helvetica, Sans-serif;
+			}
+		</style>
 		
 	</head>
 	<body>
