--- a/to-do-list/views/edit-notes.handlebars
+++ b/to-do-list/views/edit-notes.handlebars
@@ -57,6 +57,8 @@
 		<p id="alertMsg" style="color: red">{{message}}</p>
 	{{/if}}
 
+	<input style="display: none;" name="id" value="{{goal._id}}">
+
 	<div>
 		<input id="contentInput" type="text" placeholder="What's your to-do?" 
 		name="content" value="{{goal.content}}">
@@ -79,7 +81,7 @@
 	</div>
 
 	<div>
-    <input id="submitBtn" type="submit" value="UPDATE TO-DO">
+    	<input id="submitBtn" type="submit" value="UPDATE TO-DO">
   	</div>
 
  
