--- a/bounce-shoot/views/layouts/main.handlebars
+++ b/bounce-shoot/views/layouts/main.handlebars
@@ -5,12 +5,14 @@
         <title>Bounce Shoot Game</title>
 
         <style>
+            @import url('https://fonts.googleapis.com/css?family=Harmattan');
             body {
                 margin: 0;
                 padding: 0;
                 outline: none;
                 overflow-y: hidden;
-                font-size: 25px;
+                font-size: 27px;
+                font-family: 'Harmattan', sans-serif;
             }
         </style>
 
