--- a/bounce-shoot/views/rank.handlebars
+++ b/bounce-shoot/views/rank.handlebars
@@ -6,13 +6,14 @@
 
     .container {
       width: 500px;
-      margin: 5% 30%;
+      margin: 5% 33%;
       text-align: left;
     }
   </style>
 {{/section}}
 
 <div class="container">
+    <p> A complete Record of our Players! </p>
   {{#each players}}
       <p>{{name}} : {{score}} secs</p>
       <hr>
