--- a/bounce-shoot/views/game.handlebars
+++ b/bounce-shoot/views/game.handlebars
@@ -1,5 +1,8 @@
 {{#section "game"}}
   <style>
+    body {
+        font-family: 'Harmattan', sans-serif;
+    }
     #result {
       width: 100%;
       height: 100%;
@@ -22,7 +25,7 @@
     }
     #return {
       position: fixed;
-      margin-top: 400px;
+      margin-top: 420px;
       left: 45%;
     }
   </style>
