added mailbot project

--- a/bounce-shoot/views/home.handlebars
+++ b/bounce-shoot/views/home.handlebars
@@ -16,7 +16,7 @@
       align-items: center;
       position: relative;
       top: 320px;
-      left: 42%;
+      left: 43%;
     }
 
     #nameInput {
@@ -86,20 +86,25 @@
     }
 
     @media (max-width: 650px) {
+      h1 {
+        font-size: 1.7em;
+      }
+      h2 {
+        font-size: 0.8em;
+      }
       #instruction {
-        font-size: 0.9em;
+        font-size: 0.8em;
         text-align: left;
-        width: 90%;
-        margin-left: 10px;
-        margin-right: 10px;
+        margin-left: 5%;
+        margin-right: 5%;
       }
 
       #form {
-        top: 380px;
+        top: 350px;
         left: 35%;
       }
       #alertMsg {
-        margin-top: 340px;
+        margin-top: 310px;
         left: 35%;
       }
     }
