--- a/react-currency-exchange/src/index.css
+++ b/react-currency-exchange/src/index.css
@@ -2,4 +2,80 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  font-size: 40px;
+}
+
+.container {
+    width: 1300px;
+    height: 100%;
+    margin: auto;
+    margin-top: 200px;
+}
+
+.selections {
+    width: 80%;
+    height:35px;
+    margin:auto;
+}
+
+.display {
+    width: 80%;
+    height: 60%;
+    margin:auto;
+}
+
+#baseSelection {
+    font-size: 0.5em;
+    float: left;
+    width: 200px;
+    height: 40px;
+    margin-right: 320px;
+    margin-left: 150px;
+}
+
+#convertSelection {
+    position:relative;
+    top: -8.5px;
+    font-size: 0.5em;
+    width: 200px;
+    height: 40px;
+}
+
+p {
+    font-size: 1.2em;
+    float: left;
+    width: 200px;
+}
+
+#baseDisplay {
+    width: 170px;
+    margin-left: 170px;
+}
+
+#equals {
+    width: 90px;
+    margin-left: 160px;
+}
+
+#convertedRate {
+    width: 130px;
+    margin-left: 40px;
+    margin-right: 50px;
+}
+
+#date {
+    float: none;
+    position: relative;
+    font-size: 0.6em;
+    left: 900px;
+    top: 290px;
+    width: 250px;
+}
+#credit {
+    float: none;
+    position: relative;
+    font-size: 0.6em;
+    left: 900px;
+    top: 270px;
+    width: 250px;
 }
